form and formfilter are adaptive, fix center align formfilter title

--- a/src/Form/Form.module.css
+++ b/src/Form/Form.module.css
@@ -1,5 +1,5 @@
 .container {
-  width: 500px;
+  width: 320px;
   border: 1px solid black;
   margin: 100px auto;
 }
@@ -82,6 +82,9 @@
   background-color: rgba(0, 255, 50, 0.5);
 }
 @media screen and (min-width: 768px) {
+  .container {
+    width: 500px;
+  }
 }
 @media screen and (min-width: 1280px) {
 }
